...
  int _selectedIndex = 0;

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text(_selectedIndex == 0 ? 'Coffee' : 'Favorites'),
      ),
      body: IndexedStack(
        index: _selectedIndex,
        children: [
          CoffeeScreen(),
          FavoritesScreen(),
...
